update: minor layout fixes

--- a/src/lecciones/notas_2024-09-16.md
+++ b/src/lecciones/notas_2024-09-16.md
@@ -59,9 +59,9 @@ In English both are the same thing (I was), but for us "Estaba" (imperfecto) ind
 ---
 
 - ¿Cómo te llamas?
-	- Yo me llamo Juan
+	- Yo me llamo Juan.
 - ¿Dóinde vives?
-	- Yo vivo en Oranienburgo
+	- Yo vivo en Oranienburgo.
 - ¿Cómo estas?
 	- Est bien y contento.
 	
