--- a/src/lecciones/notas_2024-09-16.md
+++ b/src/lecciones/notas_2024-09-16.md
@@ -4,7 +4,7 @@ date: 2024-09-09
 
 ### Lures 16 de septembre del 2024
 
-¿Cómo estas? ⟶ Estay cansado | Estay felix ⟺ *müde*
+¿Cómo estas? ⟶ Estay cansado ⟺ *müde*
 
 ¿Cómo estas? ⟶ Estay felix ⟺ *glücklich*
 
