--- a/src/lecciones/notas_2024-09-16.md
+++ b/src/lecciones/notas_2024-09-16.md
@@ -1,8 +1,8 @@
 ---
-date: 2024-09-09
+date: 2024-09-16
 ---
 
-### Lures 16 de septembre del 2024
+### Lunes 16 de septiembre de 2024
 
 ¿Cómo estas? ⟶ Estay cansado ⟺ *müde*  
 ¿Cómo estas? ⟶ Estay felix ⟺ *glücklich*
