--- a/src/lecciones/notas_2024-11-04.md
+++ b/src/lecciones/notas_2024-11-04.md
@@ -1,1 +1,56 @@
-<p class="w3-text-blue-grey w3-large">Esta página sigue vacía.</p>
+---
+date: 2024-11-04
+---
+
+##### Lunes 4 de noviembre de 2024
+
+---
+
+### Hora del día
+
+- **12:45** &rarr; Es la una menos quarto.
+- **13:00** &rarr; Es la una en punta
+- **13:30** &rarr; Es la uno y media.
+- **13:15** &rarr; Es la una y cuarto.
+- **13:45** &rarr; Son las dos menos quarto.
+- **14:00** &rarr; Son las dos en punta.
+- **14:15** &rarr; Son las dos y cuarto.
+- **14:30** &rarr; Son las dos y media.
+
+---
+
+- **05:15** &rarr; Son las cinco y cuarto de la manaña.
+- **17:15** &rarr; Son las cinco y cuarto de la tarde
+
+- **00:00** &rarr; Es medianoche.
+- **12:00** &rarr; Es mediodía.
+
+---
+
+
+### Paises y habitantes
+
+
+Pais | masculino | femenino | idioma
+:---|:---|:---|:---
+Italia | italiano | italiana | italiano
+Austria | austriaco | austriaca | alemán
+Turquía | turco | turca | turco
+España | español | española | español
+Alemania | alemán | alemana | alemán
+Suiza | suizi | suiza | alemán / francés / italiano
+Holanda | holandese | holandesa | holandés
+Francia | francés | francesa | francés
+Gran Bretaña | británico | británica | inglés
+México | mexicano | mexicana | español
+Marruecos | marroqui | marroqui | árabe
+
+---
+##### Ejercicio
+
+1. Laura escucha musica.
+2. Laura cocina con su pareja.
+3. Laura toca la guitara.
+4. Laura baila zumba.
++ Laura busca una persona bailar zumba
++ Laura es de Argentinia
