--- a/src/lecciones/notas_2024-09-23.md
+++ b/src/lecciones/notas_2024-09-23.md
@@ -1,1 +1,7 @@
-<p class="w3-text-blue-grey w3-large">Esta página sigue vacía.</p>
+---
+date: 2024-09-23
+---
+
+### Lunes 23 de septiembre de 2024
+
+*No asistí a esta cita.*
