--- a/src/lecciones/notas_2024-11-18.md
+++ b/src/lecciones/notas_2024-11-18.md
@@ -1,1 +1,6 @@
-<p class="w3-text-blue-grey w3-large">Esta página sigue vacía.</p>
+---
+date: 2024-11-18
+---
+
+### Lunes 18 de noviembre de 2024
+
