--- a/src/lecciones/notas_2024-12-16.md
+++ b/src/lecciones/notas_2024-12-16.md
@@ -1,1 +1,5 @@
-<p class="w3-text-blue-grey w3-large">Esta página sigue vacía.</p>
+---
+date: 2024-12-16
+---
+
+### Lunes 16 de diciembre del 2024
