--- a/src/lecciones/notas_2024-09-09.md
+++ b/src/lecciones/notas_2024-09-09.md
@@ -1,8 +1,7 @@
 ---
 date: 2024-09-09
 ---
-
-### Lunes 09 de septiembre de 2024
+<div class="date">Lunes 09 de septiembre de 2024</div>
 
 ¡Hola!
 
