--- a/src/lecciones/notas_2024-09-16.md
+++ b/src/lecciones/notas_2024-09-16.md
@@ -1,11 +1,10 @@
 ---
 date: 2024-09-16
 ---
+<div class="date">Lunes 16 de septiembre de 2024</div>
 
-### Lunes 16 de septiembre de 2024
-
-¿Cómo estas? ⟶ Estay cansado ⟺ *müde*  
-¿Cómo estas? ⟶ Estay felix ⟺ *glücklich*
+¿Cómo estas? ⟶ Estay cansado ⟺ *müde*   
+¿Cómo estas? ⟶ Estay felix ⟺ *glücklich*   
 
 triste ⟺ *traurig*  
 aborrido | aborrida ⟺ *langweilig*
