--- a/src/lecciones/notas_2024-09-30.md
+++ b/src/lecciones/notas_2024-09-30.md
@@ -1,7 +1,5 @@
 ---
 date: 2024-09-30
 ---
-
-### Lunes 30 de septiembre de 2024
-
-*No asistí a esta cita.*
+<div class="date">Lunes 30 de septiembre de 2024</div>
+<div class="note">No asistí a esta cita.</div>
