--- a/src/lecciones/notas_2024-10-07.md
+++ b/src/lecciones/notas_2024-10-07.md
@@ -1,6 +1,6 @@
 ---
 date: 2024-10-07
 ---
-
-### Lunes 7 de octubre de 2024
+<div class="date">Lunes 7 de octubre de 2024</div>
+<div class="note">No hay notas disponibles.</div>
 
