--- a/src/lecciones/notas_2024-10-14.md
+++ b/src/lecciones/notas_2024-10-14.md
@@ -1,6 +1,5 @@
 ---
 date: 2024-10-14
 ---
-
-### Lunes 14 de octubre de 2024
-
+<div class="date">Lunes 14 de octubre de 2024</div>
+<div class="note">No hay notas disponibles.</div>
