--- a/src/lecciones/notas_2024-12-02.md
+++ b/src/lecciones/notas_2024-12-02.md
@@ -1,5 +1,5 @@
 ---
 date: 2024-12-02
 ---
-
-### Lunes 02 de diciembre de 2024
+<div class="date">Lunes 02 de diciembre de 2024</div>
+<div class="note">No hay notas disponibles..</div>
