--- a/src/lecciones/notas_2024-11-04.md
+++ b/src/lecciones/notas_2024-11-04.md
@@ -1,10 +1,7 @@
 ---
 date: 2024-11-04
 ---
-
-##### Lunes 4 de noviembre de 2024
-
----
+<div class="date">Lunes 4 de noviembre de 2024</div>
 
 ### Hora del día
 
