--- a/src/lecciones/notas_2024-11-11.md
+++ b/src/lecciones/notas_2024-11-11.md
@@ -1,6 +1,6 @@
 ---
 date: 2024-11-11
 ---
-
-### Lunes 11 de noviembre de 2024
+<div class="date">Lunes 11 de noviembre de 2024</div>
+<div class="note">No hay notas disponibles.</div>
 
