--- a/src/lecciones/notas_2024-12-09.md
+++ b/src/lecciones/notas_2024-12-09.md
@@ -1,5 +1,5 @@
 ---
 date: 2024-12-09
 ---
-
-### Lunes 9 de diciembre de 2024
+<div class="date">Lunes 9 de diciembre de 2024</div>
+<div class="note">No hay notas disponibles.</div>
