--- a/src/lecciones/notas_2024-12-16.md
+++ b/src/lecciones/notas_2024-12-16.md
@@ -1,5 +1,5 @@
 ---
 date: 2024-12-16
 ---
-
-### Lunes 16 de diciembre del 2024
+<div class="date">Lunes 16 de diciembre de 2024</div>
+<div class="note">No hay notas disponibles.</div>
