update: minor corrections

--- a/src/lecciones/notas_2024-09-16.md
+++ b/src/lecciones/notas_2024-09-16.md
@@ -26,7 +26,7 @@ Empfehlung Lehrbuch
 
 #### ◇ "ser" ⟺ "*sein*" ◇ "estar" ⟺ "*sein*" ◇
 
-◇ | "ser" | "estay" | [◇](https://de.pons.com/verbtabellen/spanisch/estar)
+◇ | "ser" | "estar" | [◇](https://de.pons.com/verbtabellen/spanisch/estar)
 :-|:------|:--------|:---
 Yo |⟶ fui |⟶ estuve |⟶ estaba
 Tú |⟶ fuiste |⟶ estuviste |⟶ estabas
