--- a/src/lecciones/notas_2024-11-04.md
+++ b/src/lecciones/notas_2024-11-04.md
@@ -5,11 +5,11 @@ date: 2024-11-04
 
 ### Hora del día
 
-- **12:45** &rarr; Es la una menos quarto.
+- **12:45** &rarr; Es la una menos cuarto.
 - **13:00** &rarr; Es la una en punta
 - **13:30** &rarr; Es la uno y media.
 - **13:15** &rarr; Es la una y cuarto.
-- **13:45** &rarr; Son las dos menos quarto.
+- **13:45** &rarr; Son las dos menos cuarto.
 - **14:00** &rarr; Son las dos en punta.
 - **14:15** &rarr; Son las dos y cuarto.
 - **14:30** &rarr; Son las dos y media.
