update: corrections + improved utilities

--- a/src/lecciones/notas_2024-11-04.md
+++ b/src/lecciones/notas_2024-11-04.md
@@ -35,8 +35,8 @@ Austria | austriaco | austriaca | alemán
 Turquía | turco | turca | turco
 España | español | española | español
 Alemania | alemán | alemana | alemán
-Suiza | suizi | suiza | alemán / francés / italiano
-Holanda | holandese | holandesa | holandés
+Suiza | suizo | suiza | alemán / francés / italiano
+Holanda | holandes | holandesa | holandés
 Francia | francés | francesa | francés
 Gran Bretaña | británico | británica | inglés
 México | mexicano | mexicana | español
